Disorganized text on Bayesian stuff.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -30,6 +30,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{patil2010pymc,
+  title={PyMC: Bayesian stochastic modelling in Python},
+  author={Patil, Anand and Huard, David and Fonnesbeck, Christopher J},
+  journal={Journal of statistical software},
+  volume={35},
+  number={4},
+  pages={1},
+  year={2010},
+  publisher={Europe PMC Funders}
+}
+
 @book{cox2009plate,
   title={Plate tectonics: how it works},
   author={Cox, Allan and Hart, Robert Brian},
@@ -265,6 +276,75 @@
   publisher={Nature Publishing Group}
 }
 
+@book{aster2005parameter,
+   title = "Parameter estimation and inverse problems",
+   author = "Aster, Richard C. and Borchers, Brian and Thurber, Clifford H.",
+   publisher = "Elsevier",
+   address = "New York",
+   isbn = "0-12-065604-3",
+   year = 2005
+}
+
+@article{iaffaldano2012reconstructing,
+  title={Reconstructing plate-motion changes in the presence of finite-rotations noise},
+  author={Iaffaldano, Giampiero and Bodin, Thomas and Sambridge, Malcolm},
+  journal={Nature communications},
+  volume={3},
+  pages={1048},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
+
+@article{torsvik1996continental,
+  title={Continental break-up and collision in the Neoproterozoic and Palaeozoic—a tale of Baltica and Laurentia},
+  author={Torsvik, TH and Smethurst, MA and Meert, JOSEPH G and Van der Voo, R and McKerrow, WS and Brasier, MD and Sturt, BA and Walderhaug, HJ},
+  journal={Earth-Science Reviews},
+  volume={40},
+  number={3},
+  pages={229--258},
+  year={1996},
+  publisher={Elsevier}
+}
+
+@article{sambridge2013transdimensional,
+  title={Transdimensional inference in the geosciences},
+  author={Sambridge, Malcolm and Bodin, Thomas and Gallagher, Kerry and Tkal{\v{c}}i{\'c}, H},
+  journal={Phil. Trans. R. Soc. A},
+  volume={371},
+  number={1984},
+  pages={20110547},
+  year={2013},
+  publisher={The Royal Society}
+}
+
+@article{torsvik1992baltica,
+  title={Baltica. A synopsis of Vendian-Permian palaeomagnetic data and their palaeotectonic implications},
+  author={Torsvik, Trond H and Smethurst, Mark A and Van der Voo, Rob and Trench, Allan and Abrahamsen, Niels and Halvorsen, Erik},
+  journal={Earth-Science Reviews},
+  volume={33},
+  number={2},
+  pages={133--152},
+  year={1992},
+  publisher={Elsevier}
+}
+
+@article{torsvik2008global,
+  title={Global plate motion frames: toward a unified model},
+  author={Torsvik, Trond H and M{\"u}ller, R Dietmar and Van der Voo, Rob and Steinberger, Bernhard and Gaina, Carmen},
+  journal={Reviews of Geophysics},
+  volume={46},
+  number={3},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@book{tarantola2005inverse,
+  title={Inverse problem theory and methods for model parameter estimation},
+  author={Tarantola, Albert},
+  year={2005},
+  publisher={siam}
+}
+
 @article{rudolph2014history,
   title={History and dynamics of net rotation of the mantle and lithosphere},
   author={Rudolph, Maxwell L and Zhong, SJ},
@@ -276,11 +356,18 @@
   publisher={Wiley Online Library}
 }
 
-@article{Tarling1996a,
+@article{tarling1996paleomagnetic,
     Author = {Tarling, D. H. and Abdeldayem, A. L.},
     Journal = {Geophysical Journal International},
     Number = {1},
     Pages = {115--122},
     Title = {Palaeomagnetic‐Pole Errors and A `Small‐Circle'Assessment of the Gondwanan Polar‐Wander Path},
     Volume = {125},
-    Year = {1996}}
+    Year = {1996}
+}
+
+@book{tauxe2009essentials,
+  title={Essentials of paleomagnetism},
+  author={Tauxe, L and Banerjee, SK and Butler, RF and van der Voo, R},
+  publisher={University of California Press, Berkeley}
+}
