--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -366,8 +366,17 @@
     Year = {1996}
 }
 
+@book{butler1992paleomagnetism,
+  title={Paleomagnetism: magnetic domains to geologic terranes},
+  author={Butler, Robert F},
+  volume={319},
+  year={1992},
+  publisher={Blackwell Scientific Publications Boston}
+}
+
 @book{tauxe2009essentials,
   title={Essentials of paleomagnetism},
+  year={2009},
   author={Tauxe, L and Banerjee, SK and Butler, RF and van der Voo, R},
   publisher={University of California Press, Berkeley}
 }
