--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -365,7 +365,7 @@ and so we will use it to calculate the likelihood function of the model.
 \label{sec:forward_model}
 The forward model for PEP analysis is essentially unchanged from that of \citet{gordon1984paleomagnetic}.
 We describe plate motions (and hence paleomagnetic pole motions) with a series of Euler poles.
-Each Euler pole has three parameters for which we are inverting (a latitude, a longitude and a rotation rate).
+Each Euler pole has three parameters for which we are inverting (a latitude, a longitude, and a rotation rate).
 
 We furthermore need a set of changepoints, which denote the ages where we transition from 
 one Euler pole to the next (the cusps, or ``hairpins'' of \citet{irving1972hairpins}).
