--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -90,6 +90,28 @@
   publisher={Oxford University Press}
 }
 
+@article{klootwijk2009sedimentary,
+  title={Sedimentary basins of eastern Australia: paleomagnetic constraints on geodynamic evolution in a global context},
+  author={Klootwijk, Chris},
+  journal={Australian Journal of Earth Sciences},
+  volume={56},
+  number={3},
+  pages={273--308},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
+
+@article{idnurm1994new,
+  title={New Late Eocene pole for Australia, time-averaging of remanence directions, and palaeogeographic reference systems},
+  author={Idnurm, M},
+  journal={Geophysical Journal International},
+  volume={117},
+  number={3},
+  pages={827--833},
+  year={1994},
+  publisher={Oxford University Press}
+}
+
 @article{idnurm1985lateII,
   title={Late {M}esozoic and {C}enozoic palaeomagnetism of {A}ustralia—{I}{I}. Implications for geomagnetism and true polar wander},
   author={Idnurm, Mart},
