Remove extra symbol

--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -286,7 +286,7 @@ It is often unnecessary to calculate the denominator of Equation~\eqref{eq:bayes
 P\left(\mathbf{m} \vert \mathbf{d} \right) \propto P \left( \mathbf{d} \vert \mathbf{m} \right) P \left( \mathbf{m} \right) 
 \label{eq:propbayes}
 \end{equation}
-The quantity $P(\mathbf{m} \vert | \mathbf{d})$ is known as the posterior probability,
+The quantity $P(\mathbf{m} \vert \mathbf{d})$ is known as the posterior probability,
 and represents our desired knowledge about the distributions of the paramters $\mathbf{m}$.
 The first factor on the left-hand-side of Equation~\eqref{eq:propbayes} is identical to the likelihood
 function described in Section~\ref{sec:intro_inverse_problems}, and the second factor
