--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -20,6 +20,17 @@
     publisher={Wiley Online Library}
 }
 
+@article{swanson2015new,
+  title={A new grand mean palaeomagnetic pole for the 1.11 Ga Umkondo large igneous province with implications for palaeogeography and the geomagnetic field},
+  author={Swanson-Hysell, NL and Kilian, TM and Hanson, RE},
+  journal={Geophysical Journal International},
+  volume={203},
+  number={3},
+  pages={2237--2247},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
 @article{argus2011geologically,
   title={Geologically current motion of 56 plates relative to the no-net-rotation reference frame},
   author={Argus, Donald F and Gordon, Richard G and DeMets, Charles},
@@ -28,6 +39,37 @@
   number={11},
   year={2011},
   publisher={Wiley Online Library}
+}
+
+@article{jupp1987fitting,
+  title={Fitting smooth paths to speherical data},
+  author={Jupp, Peter E and Kent, John T},
+  journal={Applied statistics},
+  pages={34--46},
+  year={1987},
+  publisher={JSTOR}
+}
+
+@article{van2001evidence,
+  title={Evidence for late Paleozoic and Mesozoic non-dipole fields provides an explanation for the Pangea reconstruction problems},
+  author={Van der Voo, Rob and Torsvik, Trond H},
+  journal={Earth and Planetary Science Letters},
+  volume={187},
+  number={1},
+  pages={71--81},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{van1990reliability,
+  title={The reliability of paleomagnetic data},
+  author={Van der Voo, Rob},
+  journal={Tectonophysics},
+  volume={184},
+  number={1},
+  pages={1--9},
+  year={1990},
+  publisher={Elsevier}
 }
 
 @article{patil2010pymc,
@@ -132,6 +174,16 @@
   pages={275--278},
   year={1993},
   publisher={Geological Society of America}
+}
+
+@article{zahirovic2015tectonic,
+  title={Tectonic speed limits from plate kinematic reconstructions},
+  author={Zahirovic, Sabin and M{\"u}ller, R Dietmar and Seton, Maria and Flament, Nicolas},
+  journal={Earth and Planetary Science Letters},
+  volume={418},
+  pages={40--52},
+  year={2015},
+  publisher={Elsevier}
 }
 
 @book{fisher1987statistical,
