--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -186,6 +186,61 @@
   publisher={Elsevier}
 }
 
+@article{richardson1992ridge,
+  title={Ridge forces, absolute plate motions, and the intraplate stress field},
+  author={Richardson, Randall M},
+  journal={Journal of Geophysical Research: Solid Earth},
+  volume={97},
+  number={B8},
+  pages={11739--11748},
+  year={1992},
+  publisher={Wiley Online Library}
+}
+
+@article{gable1991convection,
+  title={Convection in three dimensions with surface plates: Generation of toroidal flow},
+  author={Gable, Carl W and O'connell, Richard J and Travis, Bryan J},
+  journal={Journal of Geophysical Research: Solid Earth},
+  volume={96},
+  number={B5},
+  pages={8391--8405},
+  year={1991},
+  publisher={Wiley Online Library}
+}
+
+@article{forte1987plate,
+  title={Plate tectonics and aspherical earth structure: the importance of poloidal-toroidal coupling},
+  author={Forte, AM and Peltier, WR},
+  journal={Journal of Geophysical Research: Solid Earth},
+  volume={92},
+  number={B5},
+  pages={3645--3679},
+  year={1987},
+  publisher={Wiley Online Library}
+}
+
+@article{gordon1978absolute,
+  title={Absolute motion of an individual plate estimated from its ridge and trench boundaries},
+  author={Gordon, Richard G and Cox, Allan and Harter, Clayton E},
+  journal={Nature},
+  volume={274},
+  number={5673},
+  pages={752--755},
+  year={1978},
+  publisher={Nature Publishing Group}
+}
+
+@article{forsyth1975relative,
+  title={On the relative importance of the driving forces of plate motion},
+  author={Forsyth, Donald and Uyeda, Seiya},
+  journal={Geophysical Journal International},
+  volume={43},
+  number={1},
+  pages={163--200},
+  year={1975},
+  publisher={Oxford University Press}
+}
+
 @book{fisher1987statistical,
   title={Statistical analysis of spherical data},
   author={Fisher, Nicholas I and Lewis, Toby and Embleton, Brian JJ},
